[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
anyhow = "1.0"
vek = "0.16.1"
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
rangemap = "1.4.0"
